# cppcourse-brunel

./: CMakeLists.txt  Constant.hpp  main2.cpp  neurone.cpp  neurone.hpp
graphs/: g(D)
src/: Constant.hpp  Experiment.cpp  Experiment.hpp  Neurone_unittest.cpp  main2.cpp  network.cpp  network.hpp  neurone.cpp  neurone.hpp
